// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`modal flow golden frames renders the help overlay 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ c╭──────────────────────────────────────────────────────────────╮6 #70 ✓ 
 [2] - d│                          wosm help                           │        
 [3] ○ p│                                                              │  #73 ✓ 
 [4] + s│  ↑/↓ wheel  scroll dashboard                                 │        
 [5] ◜ s│  1-9/a-z    choose visible item                              │6 #76 … 
        │  N          new session                                      │        
▼ observ│  R          rename session                                   │        
 [6] x b│  X          remove worktree                                  │   #8 ✓ 
 [7] ◜ p│  C          collapse project                                 │8 #16 … 
 [8] ○ t│  /          search                                           │-1 #4 ✓ 
        │  Z          refresh snapshot                                 │        
▼ script│  H / ?      help                                             │        
 [9] ○ a│  Q          quit or close popup                              │6 #5 x1 
 [a] ? m│  Esc        back/cancel                                      │ -1 #10 
 [b] - o╰──────────────────────────────────────────────────────────────╯        
                                                                                
▼ empty-project - 0 worktrees | codex                                           
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the search prompt 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
 [9] ○ api-cache                         opencode  idle            +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown            +3 -1 #10 
 [b] - old-experiment                    -         no agent                     
                                                                                
search: apiject - 0 worktrees | codex                                           
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the collapse prompt 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
 [9] ○ api-cache                         opencode  idle            +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown            +3 -1 #10 
 [b] - old-experiment                    -         no agent                     
                                                                                
collapse project: 1:wosm 2:observer 3:scripts 4:empty-project                   
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the remove slot prompt 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
 [9] ○ api-cache                         opencode  idle            +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown            +3 -1 #10 
 [b] - old-experiment                    -         no agent                     
                                                                                
remove slot: ct - 0 worktrees | codex                                           
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the remove confirm prompt 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
 [9] ○ api-cache                         opencode  idle            +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown            +3 -1 #10 
 [b] - old-experiment                    -         no agent                     
                                                                                
confirm remove cli-help-man? Y/Ncodex                                           
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the rename slot prompt 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
 [9] ○ api-cache                         opencode  idle            +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown            +3 -1 #10 
 [b] - old-experiment                    -         no agent                     
                                                                                
Choose the slot to rename: 1-9/a-zdex                                           
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the rename sheet 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 4 worktrees | codex                                                    
 [1] ! hook-scope                     codex     Agent needs app…   +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ◜ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer - 2 worktrees | opencode                                             
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs app…   +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Rename Session                                                               │
│                                                                              │
│ Name       hook-scope|                                                       │
│ Enter:rename   Esc:back                                                      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session review 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│                                                                              │
│ Project    wosm                                                              │
│ Name       wosm-XXXXXX                                                       │
│ Agent      codex unknown                                                     │
│                                                                              │
│ Enter:create N:name P:project A:agent Esc:cancel                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│                                                                              │
│ Project    wosm                                                              │
│ Name       |wosm-XXXXXX                                                      │
│                                                                              │
│ Enter:save   Esc:back                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick project 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project                                                               │
│                                                                              │
│ 1 wosm healthy                                                               │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick agent 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Agent                                                                 │
│                                                                              │
│ 1 codex unknown                                                              │
│ 2 opencode unknown                                                           │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project sheet 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project                                                                  │
│ Start location                                                               │
│                                                                              │
│ > current directory                             /Users/example/Developer/wosm│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Enter:open Right:open Esc:cancel                                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;
